--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.0.1
 homepage:
 
 environment:
-  sdk: '>=3.3.4 <4.0.0'
+  sdk: '>=3.0.0 <4.0.0'
   flutter: '>=3.3.0'
 
 dependencies:
@@ -12,9 +12,9 @@ dependencies:
     sdk: flutter
   plugin_platform_interface: ^2.0.2
   ffi: 2.1.2
-  logging: ^1.2.0
-  native_assets_cli: ^0.5.4
-  native_toolchain_go: ^0.3.0
+#  logging: ^1.2.0
+#  native_assets_cli: ^0.5.4
+#  native_toolchain_go: ^0.3.0
 
 dev_dependencies:
   flutter_test:
