--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -40,5 +40,10 @@ end
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
+
+    # fix: building for iOS Simulator, but linking in object file built for iOS, for architecture arm64
+    target.build_configurations.each do |config|
+        config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
+    end
   end
 end
